updated EcoreGraphBuilder, added TypeResolver and startup animation